# k8s-mcp

./: .env  Dockerfile  README.md  ff  kubeconfig  mcp-k8s.py  pyproject.toml  requirement.txt  smithery.yaml
mcp_sse/: __init__.py
