[project]
name = "mcp-sse"
version = "0.1.0"
description = "SSE-based MCP Server and Client"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wenhao Sheng", email = "wenhao@example.com"}
]

[tool.poetry.dependencies]
python = "^3.13"
anthropic = ">=0.45.1"
argparse = ">=1.4.0"
httpx = ">=0.28.1"
mcp = { extras = ["cli"], version = ">=1.2.1" }
python-dotenv = ">=1.0.1"
kubernetes = ">=29.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"